# Topic-Modeling-Analysis-Tweets

./: README.md  pyproject.toml  setenv.sh  tweets_collect.sh  tweets_process.sh
tweemo/controleur/: controller.py
tweemo/db/: IOSQL.py  LocalCache.py  Serializer.py  __init__.py  docker-compose.yml  remove-docker  script_push_tweets.py
tweemo/front/: interface.py
tweemo/tmo/dimred/: AE.py  InterfaceDeep.py  ReductionEmbedding.py  __init__.py  globals.py
tweemo/tmo/processing/: __init__.py  _corpus.py  _preprocessing.py  _processing.py
tweemo/tmo/topicmodels/: __init__.py  _nmf.py  _seanmf.py  _wapper.py  globals.py
tweemo/tmo/utils/: __init__.py  _jar.py  docs.py
tweemo/tweets/data/: tweets_for_clustering.csv
tweets_manager/: __init__.py  tweets_collect.py  tweets_process.ipynb  tweets_process.py
tweets_manager/base/: __init__.py  _base.py  _custom_log.py  _tweets_getter.py  _tweets_storer.py
tweets_manager/preprocessing/: __init__.py  _text.py
